// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AbsoluteCenter> renders correctly 1`] = `
<div
  className="center"
>
  <div
    className="clickable"
  >
    Text
  </div>
</div>
`;

exports[`<AbsoluteCenter> responds to a vertical prop 1`] = `
<div
  className="center"
>
  <div
    className="clickable vertical"
  >
    Text
  </div>
</div>
`;
